--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -156,13 +156,19 @@
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="IndexList.h" />
     <ClInclude Include="Keyboard.h" />
-    <ClInclude Include="Pangle.h" />
+    <ClInclude Include="ShaderChoser.h" />
+    <ClInclude Include="SolidCube.h" />
+    <ClInclude Include="SolidGeometryShader.h" />
+    <ClInclude Include="SolidVertex.h" />
+    <ClInclude Include="NormalVertexShader.h" />
+    <ClInclude Include="Triangle.h" />
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="Mat2.h" />
     <ClInclude Include="Mat4.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="NDCScreenTransformer.h" />
     <ClInclude Include="Pipline.h" />
+    <ClInclude Include="WaveyPlane.h" />
     <ClInclude Include="Point4.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Resource.h" />
@@ -179,6 +185,7 @@
     <ClInclude Include="Vec3.h" />
     <ClInclude Include="Vec4.h" />
     <ClInclude Include="Vertex.h" />
+    <ClInclude Include="WaveyVertexShader.h" />
     <ClInclude Include="Zbuffer.h" />
   </ItemGroup>
   <ItemGroup>
@@ -195,6 +202,8 @@
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="NDCScreenTransformer.cpp" />
+    <ClCompile Include="SolidCube.cpp" />
+    <ClCompile Include="SolidVertex.cpp" />
     <ClCompile Include="Pipline.cpp" />
     <ClCompile Include="Snow.cpp" />
     <ClCompile Include="Sprite.cpp" />
