Some lighting models implemented,but this repo is out of control,too many bugs,maybe refactor it some other day.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -154,6 +154,9 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GDIPlusManager.h" />
     <ClInclude Include="Graphics.h" />
+    <ClInclude Include="PerPixelEffect.h" />
+    <ClInclude Include="PointLightEffect.h" />
+    <ClInclude Include="Sphere.h" />
     <ClInclude Include="IndexList.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="ShaderChoser.h" />
